# field-verify

./: .gitignore  LICENSE  README.md
material-verification-portal/: package-lock.json  package.json
material-verification-portal/.next/: trace
material-verification-portal/app/: page.tsx
mobile/: package-lock.json  package.json
mobile/ios/mobile.xcodeproj/: project.pbxproj
mobile/models/: certifications.ts
mobile/services/: ipfs.ts  mockOcr.ts
services/legacy/: circuit_template.circom  dockerfile  generate-zkp.js  package.json  run.sh
services/legacy/inputs/: input.json
services/legacy/outputs/: circuit_input.json  proof.json
services/pico-verification/: docker-compose.yaml  dockerfile
services/pico-verification/input/: certification.json
services/pico-verification/output/: verification.json
services/pico-verification/src/: main.rs
services/pico-verification/verification-app/prover/: Cargo.toml
services/workspace/pico-verification/: .dockerignore  Cargo.toml  docker-compose.yaml  dockerfile
services/workspace/pico-verification/output/: 6cd0c88b-2920-44a0-8420-472b3c8318ef.json  pico_proof.json
services/workspace/pico-verification/src/: api.rs  circuit.rs  main.rs  types.rs
services/workspace/verification-app/: Cargo.toml  rust-toolchain.toml
services/workspace/verification-app/app/: Cargo.toml  build.rs  certification.json
services/workspace/verification-app/app/.cargo/: cargo.toml
services/workspace/verification-app/app/src/: main.rs
services/zkp-generation/: compile-circuits.js  docker-compose.yaml  dockerfile  package.json  run.sh
web/: next.config.ts  package-lock.json  package.json  setup-dev.sh  tsconfig.json
web/app/: aluminum-bar.json  copper-sheet.json  page.tsx  steel-rod.json
(+17 files in other folders)
