[package]
name = "material-pico-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pico dependencies
pico-sdk = { git = "https://github.com/brevis-network/pico" }
chrono = "0.4"
rand = "0.8"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }