[package]
name = "material-verification-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
material-verification-lib = { path = "../lib" }
pico-sdk = { git = "https://github.com/brevis-network/pico" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
rand = "0.8.5"
env_logger = "0.10.0"
tracing = "0.1"