[package]
name = "material-verification"
version = "0.1.0"
edition = "2021"

[dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico" }

# Only include serde in the RISC-V target configuration
[target.'cfg(target_arch = "riscv32")'.dependencies]
material-verification-lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }

# Instead of using js feature, let's disable default features and use a custom feature
getrandom = { version = "0.2", features = ["custom"] }

# Add this to disable rand completely
rand = { version = "0.8", default-features = false }